@@ -6,8 +6,8 @@ describe FailFast::ErrorReporter::Hoptoad do
     use_vcr_cassette :record => :new_episodes
     before do
       FailFast.send :reset_global_error_reporters
-      @reporter = FailFast::ErrorReporter::Hoptoad.new(@api_key=INVALID_HOPTOAD_API_KEY)
-      FailFast.report_to @reporter
+      @api_key  = INVALID_HOPTOAD_API_KEY
+      @reporter = FailFast.report_to(:hoptoad => @api_key).first
     end
 
     example 'POST => 422' do
@@ -22,8 +22,8 @@ describe FailFast::ErrorReporter::Hoptoad do
 
     before do
       FailFast.send :reset_global_error_reporters
-      @reporter = FailFast::ErrorReporter::Hoptoad.new(@api_key=VALID_HOPTOAD_API_KEY)
-      FailFast.report_to @reporter
+      @api_key  = VALID_HOPTOAD_API_KEY
+      @reporter = FailFast.report_to(:hoptoad => @api_key).first
     end
 
     example 'POST => 200' do
